For 1.20.0 (Some came out with 1.19.9 for Linux):
	- KeySensor and StringSensor written and tested on OSX and Linux.

	- Javascript SFString events were calling an incorrect Javascript call;
	  changed all JS_NewString calls to JS_NewStringCopyZ.

	- added code in Javascript to enable println command; it is just a copy of print, as most
	  scripts seem to assume that print gives a carrage return.

	- X3DParser reviewed, and parts rewritten 

	- parse (only) x3dv COMPONENT, EXPORT, IMPORT, META, PROFILE statements. Note that currently nothing
	  is done with these statements.

	- VRML,x3dv routing to nodes with both (set_x and x) fields was broken - ensure that we route
	  only to the set_x fields. (same with eventOuts).

	- migrate protos scripts from depreciated eventIn, eventOut, exposedField, initializeOnly to 
	  inputOnly, outputOnly, inputOutput, initializeOnly, but keep backwards compatibility.

	- Javascript via X3D - initializers were not correctly set for X3D types (fixed VRMLC.pm to
	  start at 0, not 7000 for X3DACCESSORS, code required in X3DProtoScript.c)

	- Javascript ADD_ROOT and REMOVE_ROOT commands removed;

	- Javascript garbage collection run when FreeWRL decides, so that gc does not happen
	  in the middle of creating large data types;


For 1.19.9:
	- ECMAscript values when multiple scripts used same textual name reported incorrect
	  values.

	- statusbar now has name or description of mouse over sensitive node. near clipplane
	  moved to help in rendering this.

	- Should now compile on systems without Occlusion Culling in OpenGL.

	- PointLight and SpotLight were not calculated correctly in the Scenegraph.
	  Lighting revisited.

	- VIEWPOINT macro generated invalid addresses for set_bind flag operation.

	- looping through nodes between scenegraph traversals required MUTEX locking.

	- looping through nodes code was not reset properly on reload.

	- changed routing to nodes. with an eventIn the same as an internal field. (eg,