@@ -93,7 +93,8 @@ void compile_IndexedLineSet (struct X3D_IndexedLineSet *node) {
 	*/
 
 	if (node->coord) {
-		xc = (struct X3D_Coordinate *) node->coord;
+		POSSIBLE_PROTO_EXPANSION(node->coord,xc)
+		/* xc = (struct X3D_Coordinate *) node->coord; */
 		if (xc->_nodeType != NODE_Coordinate) {
 			ConsoleMessage ("IndexedLineSet - Coordinate node expected for coord field");
 			return;
@@ -196,7 +197,8 @@ void compile_IndexedLineSet (struct X3D_IndexedLineSet *node) {
 		FREE_IF_NZ (node->__colours);
 		node->__colours = MALLOC (sizeof(struct SFColorRGBA)*(nVertices+1));
 		newcolors = (struct SFColorRGBA *) node->__colours;
-               		cc = (struct X3D_Color *) node->color;
+			POSSIBLE_PROTO_EXPANSION(node->color,cc)
+               		/* cc = (struct X3D_Color *) node->color; */
                		if ((cc->_nodeType != NODE_Color) && (cc->_nodeType != NODE_ColorRGBA)) {
                	        	ConsoleMessage ("make_IndexedLineSet, color node, expected %d got %d\n", NODE_Color, cc->_nodeType);
 			return;
@@ -346,7 +348,8 @@ void render_PointSet (struct X3D_PointSet *node) {
 
 
        	if(node->coord) {
-               	xc = (struct X3D_Coordinate *) node->coord;
+               	/* xc = (struct X3D_Coordinate *) node->coord; */
+		POSSIBLE_PROTO_EXPANSION(node->coord,xc)
                	if (xc->_nodeType != NODE_Coordinate) {
                 	ConsoleMessage ("make_PointSet, coord node expected but not found");
 			return;
@@ -359,7 +362,8 @@ void render_PointSet (struct X3D_PointSet *node) {
  
 
        	if (node->color) {
-               	cc = (struct X3D_Color *) node->color;
+               	/* cc = (struct X3D_Color *) node->color; */
+		POSSIBLE_PROTO_EXPANSION(node->color,cc)
                	if ((cc->_nodeType != NODE_Color) && (cc->_nodeType != NODE_ColorRGBA)) {
                	        ConsoleMessage ("make_PointSet, expected %d got %d\n", NODE_Color, cc->_nodeType);
                	} else {
@@ -503,7 +507,8 @@ void compile_LineSet (struct X3D_LineSet *node) {
 	}
 
        	if(node->coord) {
-               	xc = (struct X3D_Coordinate *) node->coord;
+               	/* xc = (struct X3D_Coordinate *) node->coord; */
+		POSSIBLE_PROTO_EXPANSION(node->coord,xc)
                	if (xc->_nodeType != NODE_Coordinate) {
                	        ConsoleMessage ("make_LineSet, coord node expected but not found");
                	} else {
@@ -520,7 +525,8 @@ void compile_LineSet (struct X3D_LineSet *node) {
 	}
  
        	if (node->color) {
-               	cc = (struct X3D_Color *) node->color;
+               	/* cc = (struct X3D_Color *) node->color; */
+		POSSIBLE_PROTO_EXPANSION(node->color,cc)
                	if ((cc->_nodeType != NODE_Color) && (cc->_nodeType != NODE_ColorRGBA)) {
                	        ConsoleMessage ("make_LineSet, expected %d got %d\n", NODE_Color, cc->_nodeType);
                	} else {
